1999-09-14  Alexander V. Lukyanov  <lav@yars.free.net>

	* PutJob.cc: unsuspend session; few corrections in size handling;
	  don't try to use size of pipe.

1999-09-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* NetAccess.cc: when adding first RateLimit, reset global pool.

1999-09-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* NetAccess.cc, NetAccess.h: implement RateLimit class; use it.
	* ftpclass.cc, Http.cc: use RateLimit.
	* resource.cc: new resources net:limit-total-rate
	  and net:limit-total-max.
	* ftpget.cc: create Log::global.

1999-09-10  Alexander V. Lukyanov  <lav@yars.free.net>

	* Resolver.cc: recognize host names in the form proto,hostname and
	  lookup address in specified protocol family, e.g. inet6,hostname.com.
	  (Note: this won't work over proxies)
	* GetJob.cc: add xfer:clobber setting; don't overwrite files if it is
	  false.

1999-09-08  Alexander V. Lukyanov  <lav@yars.free.net>

	* NetAccess.cc, NetAccess.h: drop first_lookup.
	* MirrorJob.cc, MirrorJob.h: don't get just appeared files, check
	  that size/date has not changed before overwrite/append;
	  build local file set before remote one.
	* FileSet.cc, FileSet.h: (SubstractNotIn) new method; optimize
	  other Substract* methods; make FindByName const.

1999-08-31  Alexander V. Lukyanov  <lav@yars.free.net>

	* Resolver.cc: add missing \n
	* ftpclass.cc: fix previous change not to close data_sock.
	* Http.cc: call SayConnectingTo.
	* complete.cc, complete.h: move remote_completion here.
	* CmdExec.cc, CmdExec.h, lftp.cc, log.cc, log.h: make debug output
	  clear/redraw the prompt.

1999-08-26  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h, Http.cc, Http.h, LocalAccess.cc,
	  NetAccess.cc, ftpclass.cc, ftpclass.h: split off NetAccess class;
	  use Resolver cache; add Resolve method; move rate limiter to
	  NetAccess.
	* Resolver.cc, Resolver.h: implement cache.
	* LsCache.cc, LsCache.h: allow adding from Buffer class.